// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toolbar> checkedRows is loading - false 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle"
              data-ouia-component-id="OUIA-Generated-MenuToggle-6"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    checked=""
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-v5-c-check__label"
                    id="toggle-checkbox"
                  >
                    1 selected
                  </span>
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> checkedRows is loading - false NO DATA 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle"
              data-ouia-component-id="OUIA-Generated-MenuToggle-5"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-v5-c-check__label"
                    id="toggle-checkbox"
                  >
                    1 selected
                  </span>
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> checkedRows is loading - true 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-MenuToggle-4"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    checked=""
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-v5-c-check__label"
                    id="toggle-checkbox"
                  >
                    1 selected
                  </span>
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-disabled pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    disabled=""
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> checkedRows is loading - true NO DATA 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-MenuToggle-3"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-v5-c-check__label"
                    id="toggle-checkbox"
                  >
                    1 selected
                  </span>
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-disabled pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    disabled=""
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> filters should render with placeholder 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value="some"
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> filters should render with text filters 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-name"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> isSelectable is loading - false 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle"
              data-ouia-component-id="OUIA-Generated-MenuToggle-2"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check pf-m-standalone"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> isSelectable is loading - true 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle pf-m-disabled"
              data-ouia-component-id="OUIA-Generated-MenuToggle-1"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check pf-m-standalone"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-disabled pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    disabled=""
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> should render buttons 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
        >
          <button>
            Something
          </button>
        </div>
        <div
          class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
        >
          <button
            aria-expanded="false"
            aria-label="kebab dropdown toggle"
            class="pf-v5-c-menu-toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-MenuToggle-plain-1"
            data-ouia-component-type="PF5/MenuToggle"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> should render correctly - NO DATA 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> should render pagination 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value=""
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> should render with filterValue 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value="some"
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> should render with full data is loading - false 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle"
              data-ouia-component-id="OUIA-Generated-MenuToggle-8"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    checked=""
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-v5-c-check__label"
                    id="toggle-checkbox"
                  >
                    1 selected
                  </span>
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value="some"
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
        >
          <button>
            Something
          </button>
        </div>
        <div
          class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
        >
          <button
            aria-expanded="false"
            aria-label="kebab dropdown toggle"
            class="pf-v5-c-menu-toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-MenuToggle-plain-3"
            data-ouia-component-type="PF5/MenuToggle"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`<Toolbar> should render with full data is loading - true 1`] = `
<div>
  <div
    class="pf-v5-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF5/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v5-c-toolbar__content"
    >
      <div
        class="pf-v5-c-toolbar__content-section"
      >
        <div
          class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-v5-c-toolbar__item"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-menu-toggle"
              data-ouia-component-id="OUIA-Generated-MenuToggle-7"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v5-c-menu-toggle__text"
              >
                <label
                  class="pf-v5-c-check"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Select all"
                    checked=""
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="BulkSelectCheckbox"
                    data-ouia-component-type="PF5/MenuToggleCheckbox"
                    data-ouia-safe="true"
                    name="toggle-checkbox"
                    type="checkbox"
                  />
                  <span
                    aria-hidden="true"
                    class="pf-v5-c-check__label"
                    id="toggle-checkbox"
                  >
                    1 selected
                  </span>
                </label>
              </span>
              <span
                class="pf-v5-c-menu-toggle__controls"
              >
                <span
                  class="pf-v5-c-menu-toggle__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="pf-v5-l-split ins-c-conditional-filter"
            >
              <div
                class="pf-v5-l-split__item pf-m-fill"
                data-ouia-component-id="ConditionalFilter"
              >
                <span
                  class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                >
                  <input
                    aria-invalid="false"
                    aria-label="text input"
                    data-ouia-component-id="ConditionalFilter"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="filter-by-string"
                    placeholder="Filter by {key}"
                    type="text"
                    value="some"
                    widget-type="InsightsInput"
                  />
                  <span
                    class="pf-v5-c-form-control__utilities"
                  >
                    <span
                      class="pf-v5-c-form-control__icon"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
        >
          <button>
            Something
          </button>
        </div>
        <div
          class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
        >
          <button
            aria-expanded="false"
            aria-label="kebab dropdown toggle"
            class="pf-v5-c-menu-toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-MenuToggle-plain-2"
            data-ouia-component-type="PF5/MenuToggle"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 192 512"
              width="1em"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v5-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;
